<?xml version="1.0" encoding="utf-8"?>
<!-- 导航视图NavigationView的菜单 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">  <!-- 单击 -->
        <item
            android:id="@+id/nav_latest_daily"
            android:icon="@drawable/ic_menu_latest"
            android:title="@string/action_latest_daily"/>

        <item
            android:id="@+id/nav_latest_anime_comic"
            android:icon="@drawable/ic_fiber_new_black_24dp"
            android:title="@string/action_latest_anime_comic" />

        <item
            android:id="@+id/nav_latest_pic"
            android:icon="@drawable/ic_local_see_black_24dp"
            android:title="@string/action_latest_pic" />

        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_library_music_black_24dp"
            android:title="@string/action_music"/>

    </group>

    <item android:title="@string/nav_group_other">
        <menu>
            <item
                android:id="@+id/nav_skin"
                android:icon="@drawable/ic_menu_skin"
                android:title="@string/action_skin"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/action_about"/>
        </menu>
    </item>

</menu>
