<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="bottom|center_horizontal"
            app:expandedTitleMarginBottom="50dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
            app:statusBarScrim="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:id="@+id/iv_header_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"/>

            <TextView
                android:id="@+id/tv_version_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="15dp"
                android:textColor="#BBFFFFFF"
                android:textSize="13sp"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <com.xiezizuocai.puredaily.widget.TipTitleView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:pure_icon="@drawable/ic_about_change_log"
                    app:pure_title="@string/change_log"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/version_change_log"/>

                <com.xiezizuocai.puredaily.widget.TipTitleView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:pure_icon="@drawable/ic_about_contact"
                    app:pure_title="@string/activity_about_class_contact"/>

                <RelativeLayout
                    android:id="@+id/rl_weibo"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/iv_weibo"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="25dp"
                        android:src="@drawable/ic_contact_weibo"
                        android:tint="#737373"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_toRightOf="@id/iv_weibo"
                        android:text="@string/str_contact_weibo"/>

                </RelativeLayout>

                <com.xiezizuocai.puredaily.widget.TipTitleView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:pure_icon="@drawable/ic_about_statement"
                    app:pure_title="@string/activity_about_class_statement"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:lineSpacingExtra="10dp"
                    android:text="@string/app_statement"/>

                <com.xiezizuocai.puredaily.widget.TipTitleView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:pure_icon="@drawable/ic_about_thanks"
                    app:pure_title="@string/activity_about_class_thanks"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/thanks_list"/>

            </LinearLayout>

        </ScrollView>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>

